feat: add search by published date
